--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   charts_flutter: ^0.8.1
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
