python file move

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+python_lh3__api_server/local_data/*.json
+local_data/*.json
