--- a/python_lh3__api_server/pyproject.toml
+++ b/python_lh3__api_server/pyproject.toml
@@ -15,6 +15,8 @@ lh3api = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+ptpython = "^3.0.2"
+pdbpp = "^0.10.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
